@@ -124,6 +124,13 @@
         </dependency>
 
         <dependency>
+            <groupId>nl.pim16aap2.BigDoors</groupId>
+            <artifactId>v1_18_R2</artifactId>
+            <version>0.1.8.37-ALPHA</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
             <scope>compile</scope>
