@@ -26,6 +26,7 @@
         <module>v1_16_R3</module>
         <module>v1_17_R1</module>
         <module>v1_18_R1</module>
+        <module>v1_18_R2</module>
     </modules>
 
     <dependencies>
