@@ -1,4 +1,5 @@
 Alpha 0.1.8.37
+- Add support for Minecraft 1.18.2. Massive thanks to Bonn2 for helping me test this!
 - Remove duplicated messages in item names/lores in the GUI. Thanks, DjeyMute, for the suggestion!
 
 Alpha 0.1.8.36
